[package]
name = "oldoporto_service"
version = "0.1.0"
authors = ["Pierre <pseguin2011@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
shared = {path = "../shared"}
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["full"] }
warp = "0.2.5"