[package]
name = "shared"
version = "0.1.0"
authors = ["Pierre <pseguin2011@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
easy-http-request = "0.2.9"
async-trait = "0.1.41"
warp = "0.2.5"